biocomplexity/templates/mrdd-us-rasa-chatbot/mrdd-us-rasa-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mrdd-us-rasa-server-deployment
  namespace: biocomplexity
  labels:
    app: mrdd-us-rasa-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mrdd-us-rasa-server
  template:
    metadata:
      labels:
        app: mrdd-us-rasa-server
    spec:
      containers:
      - name: mrdd-us-rasa-server-container
        image: ghcr.io/nssac/mrdd-us-rasa-server-chatbot:latest
        command: ["rasa"]
        args: ["run", "--enable-api","--endpoints","endpoints.yml","--cors","*"]        
        ports:
        - containerPort: 5005
        resources:
          requests:
            memory: "1024Mi"
            cpu: "1000m"
          limits:
            memory: "2048Mi"
            cpu: "1000m"
