biocomplexity/templates/mrdd-us-rasa-chatbot/mrdd-us-rasa-action-chatbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mrdd-us-rasa-action-chatbot-service
  namespace: biocomplexity
spec:
  selector:
    app: mrdd-us-rasa-action-chatbot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5055
