biocomplexity/templates/mrdd-us-rasa-chatbot/mrdd-us-rasa-action-chatbot-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: mrdd-us-rasa-action-chatbot-nginx-ingress
  namespace: biocomplexity
spec:
  rules:
    - host: mrdd-us-rasa-action-chatbot.pods.uvarc.io
      http:
        paths:
          - backend:
              serviceName: mrdd-us-rasa-action-chatbot-service
              servicePort: 8080
            path: /
    - host: mrdd-us-rasa-action-server.uvadcos.io.uvadcos.io
      http:
        paths:
          - backend:
              serviceName: mrdd-us-rasa-action-chatbot-service
              servicePort: 8080
            path: /
